--- a/TP_Algoritmos/TP_Algoritmos.vcxproj
+++ b/TP_Algoritmos/TP_Algoritmos.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Pedido.h" />
     <ClInclude Include="Usuario.h" />
     <ClInclude Include="Vestimenta.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Pedido.cpp" />
     <ClCompile Include="Usuario.cpp" />
     <ClCompile Include="Vestimenta.cpp" />
   </ItemGroup>
