--- a/TP_Algoritmos/TP_Algoritmos.vcxproj
+++ b/TP_Algoritmos/TP_Algoritmos.vcxproj
@@ -127,15 +127,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CatalogoVestimenta.h" />
     <ClInclude Include="Comprar.h" />
     <ClInclude Include="Envio.h" />
+    <ClInclude Include="Marca.h" />
+    <ClInclude Include="Oferta.h" />
     <ClInclude Include="Pedido.h" />
+    <ClInclude Include="Temporada.h" />
     <ClInclude Include="Usuario.h" />
     <ClInclude Include="Vestimenta.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CatalogoVestimenta.cpp" />
     <ClCompile Include="Comprar.cpp" />
     <ClCompile Include="Envio.cpp" />
+    <ClCompile Include="Marca.cpp" />
+    <ClCompile Include="Oferta.cpp" />
+    <ClCompile Include="Temporada.cpp" />
     <ClCompile Include="TP_Algoritmos.cpp" />
     <ClCompile Include="Pedido.cpp" />
     <ClCompile Include="Usuario.cpp" />
