--- a/TP_Algoritmos/TP_Algoritmos.vcxproj
+++ b/TP_Algoritmos/TP_Algoritmos.vcxproj
@@ -129,30 +129,37 @@
   <ItemGroup>
     <ClInclude Include="CarritoCompras.h" />
     <ClInclude Include="CatalogoVestimenta.h" />
+    <ClInclude Include="Cliente.h" />
     <ClInclude Include="Comprar.h" />
+    <ClInclude Include="Distribuidor.h" />
     <ClInclude Include="Envio.h" />
     <ClInclude Include="Favoritos.h" />
+    <ClInclude Include="GestorUsuarios.h" />
     <ClInclude Include="HIstorialCompras.h" />
     <ClInclude Include="Marca.h" />
     <ClInclude Include="Oferta.h" />
     <ClInclude Include="Pedido.h" />
     <ClInclude Include="Temporada.h" />
     <ClInclude Include="Usuario.h" />
+    <ClInclude Include="Vendedor.h" />
     <ClInclude Include="Vestimenta.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CarritoCompras.cpp" />
     <ClCompile Include="CatalogoVestimenta.cpp" />
+    <ClCompile Include="Cliente.cpp" />
     <ClCompile Include="Comprar.cpp" />
+    <ClCompile Include="Distribuidor.cpp" />
     <ClCompile Include="Envio.cpp" />
     <ClCompile Include="Favoritos.cpp" />
+    <ClCompile Include="GestorUsuarios.cpp" />
     <ClCompile Include="HIstorialCompras.cpp" />
     <ClCompile Include="Marca.cpp" />
     <ClCompile Include="Oferta.cpp" />
     <ClCompile Include="Temporada.cpp" />
     <ClCompile Include="TP_Algoritmos.cpp" />
     <ClCompile Include="Pedido.cpp" />
-    <ClCompile Include="Usuario.cpp" />
+    <ClCompile Include="Vendedor.cpp" />
     <ClCompile Include="Vestimenta.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
